--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vjezba</title>
     <p>Tekst sa remote repozitorija</p>
+    <p>Drugi tekst sa remote repozitorija</p>
 </head>
 <body>
 </body>
